--- a/index.html
+++ b/index.html
@@ -103,14 +103,18 @@
                         <p>As a beginner Java developer, I offer a range of services to assist clients in their software
                             development journey. I specialize in creating simple web applications and desktop programs
                             using Java and related technologies. My services include custom software development, bug
-                            fixing, and application maintenance. <br />I can also provide basic database integration and
+                            fixing, and application maintenance.I can also provide basic database integration and
                             API
                             development support. As a new developer, I am eager to learn and take on new challenges,
                             collaborating with clients to understand their specific needs and deliver cost-effective
-                            solutions. <br />My focus is on clean, well-documented code and delivering projects within
+                            solutions.My focus is on clean, well-documented code and delivering projects within
                             agreed
-                            timelines. I am committed to continuous improvement, keeping up with the latest Java trends
-                            and best practices to ensure the success of every project I undertake.</p>
+                            timelines. as mentioned my services include custom software development, 
+                            bug fixing, and application maintenance. I am committed to continuous improvement, 
+                            keeping up with the latest Java trends
+                            and best practices to ensure the success of every project I undertake.
+                             
+                             </p>
 
                         <a href="#" class="read">learn more</a>
                     </div>
