--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anushka | Portfolio</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -24,7 +25,7 @@
             <a href="#contact" style="--i:6">Contact</a>
         </nav>
     </header>
-    <section class="home">
+    <section class="home home-kk">
         <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>Anushka Agarwal</h1>
@@ -163,7 +164,7 @@
 
 
 
-    <h1 class="sub-title" id="skills">My <span>Skills</span></h1>
+    <h1 class="sub-title sub-title-kk" id="skills">My <span>Skills</span></h1>
 
 
     <section>
@@ -228,7 +229,7 @@
             </div>
         </div>
 
-        <div class="container1">
+        <div class="container1 container1-kk">
 
             <h1 class="heading1">Professional Skills</h1>
             <div class="radial-bars">
