--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                             <img class="mov" src="time.png" />
                         </div>
                     </a>
-                    <a href="">
+                    <a href="https://github.com/anushka120302/Quiz-Management-System">
                         <div>
                             <h1>Quiz Management System</h1>
                             <img class="mov" src="quiz.jpg" />
