--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#about" style="--i:2">About</a>
             <a href="#skills" style="--i:3">Skill</a>
             <a href="https://drive.google.com/file/d/1Yk7zu_r28QNeiIlPrb4CfmhYMdytSPUw/view?usp=sharing"
-                style="--i:4">Resume</a>
+                target="_blank" style="--i:4">Resume</a>
             <a href="#projects" style="--i:5">Projects</a>
             <a href="#contact" style="--i:6">Contact</a>
         </nav>
